@@ -1,8 +1,9 @@
 Current Version: @@VERSION@@
 
-ctags-5.2.3 (Mon Feb 18 2002)
+ctags-5.2.3 (Sun Feb 24 2002)
 * Fixed portability problem in makefile [Solaris, FreeBSD].
 * Fixed infinite loop for certain cases of invalid syntax [Eiffel].
+* Chagned Asm parser to regex, extending its support for more variants [Asm].
 
 ctags-5.2.2 (Sat Feb 16 2002)
 * Fixed spurious tags following empty feature clause [Eiffel].
